# happyml-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  annotated.html  annotated_dup.js  classes.html  classhappyml_1_1Classifier-members.html  classhappyml_1_1Classifier.html  classhappyml_1_1Classifier.js  classhappyml_1_1DataSet-members.html  classhappyml_1_1DataSet.html  classhappyml_1_1DataSet.js  classhappyml_1_1Denormalizer.html  classhappyml_1_1Denormalizer.js  classhappyml_1_1Destandarizer-members.html  classhappyml_1_1Destandarizer.html  classhappyml_1_1DestandarizerXY-members.html  classhappyml_1_1DestandarizerXY.html  classhappyml_1_1DestandarizerXY.js  classhappyml_1_1KFoldCrossValidation-members.html  classhappyml_1_1KNN-members.html  classhappyml_1_1KNN.html  classhappyml_1_1KNN.js  classhappyml_1_1LDA-members.html  classhappyml_1_1LDA.js  classhappyml_1_1LinearModel-members.html  classhappyml_1_1LinearModel.html  classhappyml_1_1LinearModel.js  classhappyml_1_1LinearRegression-members.html  classhappyml_1_1LinearRegression.html  classhappyml_1_1LinearRegression.js  classhappyml_1_1LogisticRegression-members.html  classhappyml_1_1LogisticRegression.html  classhappyml_1_1NNRegression-members.html  classhappyml_1_1NeuralNetwork-members.html  classhappyml_1_1NeuralNetwork.html  classhappyml_1_1NeuralNetwork.js  classhappyml_1_1NeuralNetworkModel.html  (+134 more)
include/: happyml.h
include/happyml/: classifier.h  dataset.h  happytools.h  k_fold_cross_validation.h  linear_model.h  neural_network_model.h  predictor.h  serializable.h  transformer.h  types.h  utils.h
include/happyml/knn/: knn.h
include/happyml/linear_regression/: linear_regression.h
include/happyml/logistic_regression/: logistic_regression.h
include/happyml/neural_network/: neural_network.h  neural_network_model.h  nn_regression.h
include/happyml/perceptron/: perceptron.h
include/happyml/svm/: svm.h  svm_gaussian.h  svm_linear.h
include/happyml/transformers/: lda.h  normalizer.h  pca.h  standarizer.h  transformer.h
nn_dot/: file.tex  lm.dot  nn.dot  template.tex
search/: all_0.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+20 more)
src/: classifier.cpp  dataset.cpp  happyml.cpp  happytools.cpp  k_fold_cross_validation.cpp  predictor.cpp  serializable.cpp  transformer.cpp  utils.cpp
src/knn/: knn.cpp
src/linear_regression/: linear_regression.cpp
src/logistic_regression/: logistic_regression.cpp
src/neural_network/: neural_network.cpp  neural_network_model.cpp  nn_regression.cpp
src/perceptron/: perceptron.cpp
src/svm/: svm.cpp  svm_gaussian.cpp  svm_linear.cpp
src/transformers/: lda.cpp  normalizer.cpp  pca.cpp  standarizer.cpp  transformer.cpp
test/: basic_tests.cpp  cv_tests.cpp  dataset_tests.cpp  happytools_tests.cpp  knn_tests.cpp  linear_tests.cpp  logistic_tests.cpp  mytest.cpp  neural_tests.cpp  normalizer_tests.cpp  pca_tests.cpp  perceptron_tests.cpp  svm_tests.cpp  transformer_tests.cpp
test/fixtures/: 3features.data  4points.data  circle.data  parabola.data  pca.data  svm.data
